Fix auto-collapse

--- a/dmhelper-electron/src/stylesheets/action-display.css
+++ b/dmhelper-electron/src/stylesheets/action-display.css
@@ -21,7 +21,7 @@
 }
 
 /* Display Region */
-#actionsTab {
+.actionTab {
     width: 100%;
 }
 
